Fixed bugs on Iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1047,19 +1047,6 @@ body.lock {
        background:linear-gradient(90deg, #288FB1, 15%, #000, 85%, #288FB1,);
     }*/
   position: relative;
-  /*    &:nth-child(4){
-         .feature-portfolio__container{
-            .feature-portfolio__body:nth-child(3){
-               .item-feature:nth-child(1){
-                  .item-feature__img{
-                     video{
-                        border-radius: 0 !important;
-                     }
-                  }
-               }
-            }
-         }
-      }*/
 }
 @supports (margin-bottom: clamp( 2.5rem , 1.5909090909rem  +  4.5454545455vw , 5rem )) {
   .portfolio__item {
@@ -1104,6 +1091,17 @@ body.lock {
   width: 100%;
   height: 6px;
   background: linear-gradient(90deg, #288FB1, 15%, #000, 85%, #288FB1);
+}
+.portfolio__item:nth-child(4) .feature-portfolio__container .feature-portfolio__body:nth-child(3) .item-feature:nth-child(1) .item-feature__img {
+  display: inline-block;
+  border-radius: 50%;
+  -khtml-border-radius: 50%;
+}
+.portfolio__item:nth-child(4) .feature-portfolio__container .feature-portfolio__body:nth-child(3) .item-feature:nth-child(1) .item-feature__img video {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -khtml-border-radius: 50%;
+  vertical-align: middle;
 }
 .portfolio__image {
   height: 600px;
